  - add support for a dedicated north-up map page layout
  - the thermal assistant InfoBox is now clickable
  - nearest airspace InfoBoxes (horizontal and vertical) are now clickable
    to open airspace details dialog #406
  - Add support for multiple airspace files in UI
  - Add support for multiple waypoint files in UI
  - Add support for multiple  airfields or details waypoint in UI
  - QuickMenu: revamped look
  - QuickMenu: sane cursor control
  - add kinetic drag scrolling to vertical scroll panels
  - improve touch screen tap-vs-drag detection
  - implement interaction rules and selection management for InfoBoxes
  - draw separator between top widget and map
  - keep popups centered on visible map
  - improve margin handling for different screen orientations
  - fix OpenGL panels not clearing background
  - fix layout overlap and improve navigation in analysis dialog

* Android
  - fix crash on startup when loading icons on ldpi screens
  - update 'white list' of USB devices with one more VID/PID pair for SoftRF Academy
  - make xcsoar accessible from lock screen
  - battery: use scale for charge percent calculation
  - battery: prevent shutdown on devices without battery
  - add Android 15 edge-to-edge opt-out and theme support
  - enable fullscreen mode with display cutout (notch) support
  - fix Android HiDPI native size handling
* Windows
  - Popupmessages are now shown with full text again
* macOS
  - add .app bundle, .dmg and .pkg support with bundled ANGLE
  - make App Store ready with signing
  - add third-party notice for ANGLE
* iOS
  - Improve audio support: prevent ducking and enable sound playback even when the phone is muted
  - implement access to iPhone barometric altitude sensor
  - add background location management to prevent crashes
  - disable dragging of windows on iPhones
* Linux
  - fix Wayland window resizing and immediate redraw
  - handle Wayland configure events and improve resize responsiveness